tests/NormalTests/paczka1/small_fuzzy/46571938.err
Error in line 7: WALUbyY A599 16,91
Error in line 14: FI63h S536 16,7
